--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "react-app"]
 	path = react-app
 	url = https://github.com/neetesshhr/react-app
+[submodule "treeleafjavaapi"]
+	path = treeleafjavaapi
+	url = https://github.com/neetesshhr/treeleafjavaapi
